@startuml
class Revision {
  number
  title
  summary
  contents
}

class ImageRevision {
  filename
  crop
  alt_text
  caption
  credit
}

class Blob {
  key
  content_type
}

class AssetManagerState {
  value
  asset_manager_path
}

Revision *-* ImageRevision: all
Revision .. ImageRevision: lead >
ImageRevision --* Image
ImageRevision --* AssetManagerState
ImageRevision --* Blob
@enduml
